packages/tsdaodaologin/src/login.css
.wk-login {
    display: table;
    height: 100%;
    width: 100%;
    min-height: 600px;
    padding-bottom: 50px;
    position: absolute;
    background-color: rgb(255, 255, 255);
}

.wk-login-content {
    display: table-cell;
    vertical-align: middle;
    position: relative;
}

.wk-login-content-logo {
    align-items: center;
    display: flex;
    height: 120px;
    justify-content: center;
    min-width: 100%;
    width: 120px;
}

.wk-login-content-logo img {
    width: 75px;
    height: 75px;
}

.wk-login-content-slogan {
    color: rgba(0, 0, 0, 1);
    font-size: 36px;
    font-weight: 450;
    line-height: 40px;
    margin-bottom: 45px;
    margin-top: 24px;
    text-align: center;
}

.wk-login-content-form {
    margin-top: 32px;
}

.wk-login-content-form input {
    border: 1px solid rgba(0, 0, 0, .20);
    border-radius: 4px;
    color: rgba(0, 0, 0, 1);
    display: block;
    font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
    font-size: 18px;
    height: 42px;
    margin-bottom: 12px;
    margin-left: auto;
    margin-right: auto;
    padding: 0 16px;
    width: 286px;
}

.wk-login-content-form-buttons {
    display: flex;
    align-items: center;
    justify-content: center;
}


.wk-login-content-form-ok {
    border-radius: 50px;
    display: flex;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    font-size: 16px;
    padding: 9.5px 20px;
    margin-top: 24px;
}

.wk-login-content-form-others {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    width: 320px;
}

.wk-login-content-form-scanlogin {
    color: #929292;
    font-size: 15px;
    font-weight: normal;
    text-align: center;
    cursor: pointer;
}

.wk-login-content-form-switch {
    color: var(--wk-color-theme);
    font-size: 15px;
    font-weight: normal;
    text-align: center;
    cursor: pointer;
    margin-top: 16px;
}

.wk-login-footer {
    color: #262626;
    font-size: 16px;
    font-weight: 400;

    bottom: 0;
    margin-bottom: 66px;
    position: absolute;
    text-align: center;
    width: 100%;
}

.wk-login-footer ul {
    display: flex;
    justify-content: center;
    margin-bottom: 0px;
}

.wk-login-footer ul li {
    margin-left: 40px;
}

.wk-login-content-phonelogin {
    margin: 0 auto;
}

.wk-login-content-scanlogin {
    display: none;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.wk-login-content-scanlogin-show {
    display: flex;
}

.wk-login-content-scanlogin-qrcode {
    width: 280px;
    height: 280px;
    position: relative;

    opacity: 0;
    transform: scale(0);
    transition: transform 300ms cubic-bezier(0.34, 1.56, 0.64, 1),opacity 300ms;
   
}

.wk-login-content-scanlogin-show .wk-login-content-scanlogin-qrcode{
    opacity: 1;
    transform: scale(1);
}

.wk-login-content-scanlogin-qrcode-avatar {
   
   position: absolute;
   top: 50%;
   left: 50%;
   margin-top: -30px;
   margin-left: -30px;

   opacity: 0;
   transform: scale(0);
   transition: transform 300ms cubic-bezier(0.34, 1.56, 0.64, 1),opacity 300ms;
}


.wk-login-content-scanlogin-qrcode-avatar-show {
    opacity: 1;
    transform: scale(1);
}

.wk-login-content-scanlogin-qrcode-avatar img {
    width: 60px;
    height: 60px;
   border-radius: 50%;
}

.wk-login-content-scanlogin-qrcode-title {
    margin-top: 30px;
    color: rgba(9,30,66,.87);
}

.wk-login-content-scanlogin-qrcode-desc li {
    counter-increment: item;
    text-align: left;
    margin: 0.75rem 0;
    display: flex;
    color: rgba(9,30,66,.87);
}

.wk-login-content-scanlogin-qrcode-desc li::before {
    content: counter(item);
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 1.375rem;
    height: 1.375rem;
    padding: 0;
    margin: 0 0.75rem 0 0;
    background: var(--wk-color-theme);
    border-radius: 50%;
    font-size: smaller;
    color: #fff;
}

.wk-login-footer-buttons button{
    background-color: transparent;
    color: var(--wk-color-theme);
    outline: none !important;
    border: 0;
    height: 3.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.625rem;
    cursor: pointer;
}

.wk-login-content-scanlogin-qrcode-expire {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgb(255, 255,255,0.95);
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.wk-login-content-scanlogin-qrcode-expire img {
    width: 50px;
    height: 50px;
    cursor: pointer;
}

